--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title: Course Title Here
+title: Program Evaluation in R Zach Drake
 description: Course description goes here.
 programming_language: r
 from: "r-base-prod:v1.0.2"
